--- a/home.css
+++ b/home.css
@@ -653,3 +653,74 @@ font-size: inherit;
   border: 1px solid rgb(126, 41, 210);
   outline: none;
 }
+
+
+
+/* Calculator style */
+.calculator{
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  border-radius: 5px;
+  scrollbar-width: none;
+  height: 300px;
+}
+ .btns {
+  width: 50px;
+  height: 50px;
+  border: none;
+  text-align: center;
+  line-height: 50px;
+  font-size: 35px;
+  border-radius: 50%;
+  font-weight: 550;
+  background: #e0e0e0;
+  box-shadow: 14px 14px 28px #c3c3c3, -14px -14px 28px #fdfdfd;
+}
+
+.sub-division{
+  display: flex;
+  height: 100px;
+  justify-content: space-between;
+  align-items: flex-end;
+}
+.calc-body{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  gap: 15px;
+  flex-direction: column;
+  justify-content: start;
+  padding: 10px 10px 30px 10px;
+}
+.btns:active {
+  transform: scale(0.95);
+}
+
+.equal {
+  background-color: rgb(0, 0, 0);
+  color: #ffffff;
+}
+.display {
+  width: 100%;
+  height: 30%;
+  overflow: scroll;
+  display: flex;
+  justify-content: flex-end;
+  align-items: end;
+  flex-direction: column;
+  font-size: 50px;
+  gap: 10px;
+  padding-right: 30px;
+}
+.values {
+  opacity: 0.7;
+}
+
+.add,
+.del,
+.division,
+.multiply,
+.sub {
+  background-color: rgb(255, 170, 0);
+}
