--- a/home.css
+++ b/home.css
@@ -568,10 +568,15 @@
   -o-transform: rotate(90deg) translateX(-1px);
 }
 .input-container {
-  padding: 10px 20px;
+  padding: 10px 0px;
+  height: 100vh;
+  overflow: hidden;
+  overflow-y: scroll;
+  scrollbar-width: none;
 }
 .input-container .head {
   width: 100%;
+  padding: 0px 20px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -586,6 +591,7 @@
   align-items: center;
   gap: 10px;
   width: 100%;
+  padding: 0px 20px;
 }
 .expense-body {
   flex-grow: 1;
@@ -596,7 +602,7 @@
   gap: 5px;
   justify-content: center;
   align-items: center;
-  padding:0px 10px;
+  padding: 0px 10px;
 }
 .income-body,
 .transfer-body {
@@ -612,17 +618,19 @@
   justify-content: center;
   align-items: center;
   gap: 15px;
+  padding: 0px 20px;
 }
-.sub-head-two .account-body,.sub-head-two .category-body{
+.sub-head-two .account-body,
+.sub-head-two .category-body {
   display: flex;
   flex-direction: column;
   flex-grow: 1;
   justify-content: space-between;
   align-items: center;
   gap: 5px;
-  
 }
-.sub-head-two .account-body .child-body,.sub-head-two .category-body .child-body{
+.sub-head-two .account-body .child-body,
+.sub-head-two .category-body .child-body {
   display: flex;
   flex-direction: row-reverse;
   width: 100%;
@@ -636,59 +644,70 @@
   -ms-border-radius: 5px;
   -o-border-radius: 5px;
 }
-.sub-head-two .account-body .child-body img,.sub-head-two .category-body .child-body img{
- width: 30px;
- height: 30px;
+.sub-head-two .account-body .child-body img,
+.sub-head-two .category-body .child-body img {
+  width: 30px;
+  height: 30px;
 }
-.notes-box textarea{
+.notes-box {
+  padding: 0px 20px;
+}
+.notes-box textarea {
   max-width: 100%;
-min-width: 100%;
-min-height: 80px;
-max-height: 80px;
-padding: 10px;
-font-size: inherit;
-
+  min-width: 100%;
+  min-height: 80px;
+  max-height: 80px;
+  padding: 10px;
+  font-size: inherit;
 }
-.notes-box textarea:focus{
+.notes-box textarea:focus {
   border: 1px solid rgb(126, 41, 210);
   outline: none;
 }
 
-
-
 /* Calculator style */
-.calculator{
+.calculator {
   display: flex;
   justify-content: flex-start;
   align-items: flex-start;
   border-radius: 5px;
   scrollbar-width: none;
   height: 300px;
+  background-color: rgb(0, 0, 0);
+  margin-bottom: 350px;
+  padding: 10px;
+  position: relative;
+  top: -70px;
 }
- .btns {
+.btns {
   width: 50px;
   height: 50px;
   border: none;
   text-align: center;
   line-height: 50px;
   font-size: 35px;
-  border-radius: 50%;
+  border-radius: 10px;
   font-weight: 550;
   background: #e0e0e0;
-  box-shadow: 14px 14px 28px #c3c3c3, -14px -14px 28px #fdfdfd;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
+  flex-grow: 1;
 }
 
-.sub-division{
+.sub-division {
   display: flex;
   height: 100px;
   justify-content: space-between;
   align-items: flex-end;
+  gap: 10px;
 }
-.calc-body{
+.calc-body {
   width: 100%;
   height: 100%;
   display: flex;
-  gap: 15px;
+  gap: 10px;
   flex-direction: column;
   justify-content: start;
   padding: 10px 10px 30px 10px;
@@ -701,19 +720,20 @@ font-size: inherit;
   background-color: rgb(0, 0, 0);
   color: #ffffff;
 }
-.display {
+.calc-display {
   width: 100%;
-  height: 30%;
+  height: 100px;
   overflow: scroll;
   display: flex;
   justify-content: flex-end;
   align-items: end;
   flex-direction: column;
-  font-size: 50px;
-  gap: 10px;
+  font-size: 30px;
+  gap: 5px;
   padding-right: 30px;
+  scrollbar-width: none;
 }
-.values {
+.calc-values {
   opacity: 0.7;
 }
 
