--- a/home.css
+++ b/home.css
@@ -519,7 +519,7 @@
   -ms-transition: all 0.5s ease;
   -o-transition: all 0.5s ease;
 }
-.add-item.active {
+.add-item.open {
   width: 100%;
   height: 100%;
   z-index: 1;
@@ -533,8 +533,11 @@
   -ms-border-radius: 0;
   -o-border-radius: 0;
 }
-.add-item.active .plus {
+.add-item.open .plus {
   display: none;
+}
+.add-item.open .input-containers {
+  display: flex;
 }
 .add-item .plus {
   display: flex;
@@ -567,21 +570,30 @@
   -ms-transform: rotate(90deg) translateX(-1px);
   -o-transform: rotate(90deg) translateX(-1px);
 }
-.input-container {
-  padding: 10px 0px;
+.input-containers.active{
+  display: flex;
+}
+ .input-containers{
+  padding-top: 15px;
   height: 100vh;
+  width: 100%;
+  display: none;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
   overflow: hidden;
   overflow-y: scroll;
   scrollbar-width: none;
+  gap: 20px;
 }
-.input-container .head {
+.input-containers .head {
   width: 100%;
   padding: 0px 20px;
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
-.input-container .head .li {
+.input-containers .head .li {
   display: flex;
   gap: 10px;
 }
@@ -618,6 +630,7 @@
   justify-content: center;
   align-items: center;
   gap: 15px;
+  width: 100%;
   padding: 0px 20px;
 }
 .sub-head-two .account-body,
@@ -651,6 +664,7 @@
 }
 .notes-box {
   padding: 0px 20px;
+  width: 100%;
 }
 .notes-box textarea {
   max-width: 100%;
@@ -668,16 +682,13 @@
 /* Calculator style */
 .calculator {
   display: flex;
-  justify-content: flex-start;
-  align-items: flex-start;
+  justify-content: flex-end;
+  align-items: flex-end;
   border-radius: 5px;
   scrollbar-width: none;
-  height: 300px;
-  background-color: rgb(0, 0, 0);
-  margin-bottom: 350px;
+  width: 100%;
+  height: 230px;
   padding: 10px;
-  position: relative;
-  top: -70px;
 }
 .btns {
   width: 50px;
@@ -695,6 +706,9 @@
   -o-border-radius: 10px;
   flex-grow: 1;
 }
+.main-input-box{
+  width: 100%;
+}
 
 .sub-division {
   display: flex;
@@ -705,12 +719,12 @@
 }
 .calc-body {
   width: 100%;
-  height: 100%;
+  height: 270px;
   display: flex;
   gap: 10px;
   flex-direction: column;
   justify-content: start;
-  padding: 10px 10px 30px 10px;
+  padding: 10px 10px 10px 10px;
 }
 .btns:active {
   transform: scale(0.95);
@@ -722,9 +736,9 @@
 }
 .calc-display {
   width: 100%;
-  height: 100px;
   overflow: scroll;
   display: flex;
+  height: 90px;
   justify-content: flex-end;
   align-items: end;
   flex-direction: column;
@@ -732,6 +746,7 @@
   gap: 5px;
   padding-right: 30px;
   scrollbar-width: none;
+  
 }
 .calc-values {
   opacity: 0.7;
