--- a/home.css
+++ b/home.css
@@ -782,6 +782,7 @@
   border: 1px solid gray;
   padding: 8px 20px;
   border-radius: 5px;
+  gap: 10px;
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   -ms-border-radius: 5px;
