--- a/home.css
+++ b/home.css
@@ -760,7 +760,7 @@
   -ms-transform: rotate(-30deg);
   -o-transform: rotate(-30deg);
   animation: shine 2s ease 1s;
-  -webkit-animation: shine 2s ease 2s; 
+  -webkit-animation: shine 2s ease 2s;
 }
 @keyframes shine {
   to {
@@ -914,7 +914,8 @@
 .sub {
   background-color: rgb(255, 170, 0);
 }
-.account-options-body {
+.account-options-body,
+.category-options-body {
   position: absolute;
   width: 100%;
   height: max-content;
@@ -931,10 +932,12 @@
   animation: opnecalc 0.3s ease;
   -webkit-animation: opnecalc 0.3s ease;
 }
-.account-options-body.active {
+.account-options-body.active,
+.category-options-body.active {
   display: flex;
 }
-.account-options-body ul.parent-box {
+.account-options-body ul.parent-box,
+.category-options-body ul.parent-box {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -962,4 +965,30 @@
   justify-content: space-between;
   align-items: center;
   width: 100%;
+}
+.category-options-body ul{
+  flex-direction: row !important;
+  flex-wrap: wrap;
+  height: 350px;
+  overflow: hidden;
+  overflow-y: scroll;
+  scrollbar-width: none;
+}
+.category-options-body ul li{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 5px;
+  flex-direction: column;
+  width:50px;
+  flex-grow: 1;
+}
+.category-options-body ul li img {
+  width: 50px;
+  height: 50px;
+  border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
 }
