--- a/home.css
+++ b/home.css
@@ -966,7 +966,7 @@
   align-items: center;
   width: 100%;
 }
-.category-options-body ul{
+.category-options-body ul {
   flex-direction: row !important;
   flex-wrap: wrap;
   height: 350px;
@@ -974,13 +974,13 @@
   overflow-y: scroll;
   scrollbar-width: none;
 }
-.category-options-body ul li{
+.category-options-body ul li {
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 5px;
   flex-direction: column;
-  width:60px;
+  width: 60px;
   flex-grow: 1;
 }
 .category-options-body ul li img {
@@ -991,4 +991,81 @@
   -moz-border-radius: 10px;
   -ms-border-radius: 10px;
   -o-border-radius: 10px;
+}
+
+/* Style for tostal */
+.success-tostal {
+  background-color: rgb(255, 208, 208);
+  width: 300px;
+  height: 60px;
+  padding: 5px 10px 5px 20px;
+  display: none;
+  justify-content: space-evenly;
+  align-items: center;
+  gap: 15px;
+  position: absolute;
+  top: 23rem;
+  opacity: 0;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 10px;
+  overflow: hidden;
+  border-left: 5px solid rgb(255, 0, 0);
+  animation: messagebox 0.3s ease;
+  -webkit-animation: messagebox 0.3s ease;
+  animation-fill-mode: forwards;
+}
+@keyframes messagebox {
+  0% {
+    opacity: 0;
+  }
+  100%{
+    opacity: 1;
+  }
+}
+
+.x-icon {
+  width: 30px;
+  height: 30px;
+  background-color: rgb(255, 0, 0);
+  border-radius: 50%;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.x-icon .bar-1 {
+  width: 3px;
+  height: 16px;
+  transform: rotate(-45deg) translateY(1px) translateY(1px);
+  background-color: #ffffff;
+}
+.x-icon .bar-2 {
+  width: 3px;
+  height: 16px;
+  transform: rotate(45deg) translateY(1px) translateY(1px);
+  background-color: #ffffff;
+}
+
+.message-box {
+  flex-grow: 1;
+}
+
+.message-box .message {
+  width: 100%;
+  font-size: 15px;
+  font-weight: 700;
+}
+.message-box .text {
+  width: 100%;
+  font-size: 14px;
+}
+.success-line {
+  position: absolute;
+  width: 100%;
+  height: 5px;
+  bottom: 0;
+  left: 0;
+  background-color: rgb(255, 0, 0);
+  transition: all 0.3s ease;
 }
