--- a/home.css
+++ b/home.css
@@ -493,7 +493,7 @@
   justify-content: center;
   align-items: center;
 }
-.parent-detail-view.active,.parent-detail-view.verified {
+.parent-detail-view.active{
   display: flex;
   transition: background-color 0.3s linear;
   -webkit-transition: background-color 0.3s linear;
