--- a/style.css
+++ b/style.css
@@ -310,53 +310,13 @@ main section.active {
   gap: 20px;
   animation: slide-left 0.3s ease;
   padding: 15px;
-  -webkit-animation: slide-left 0.3s ease .6s; 
+  -webkit-animation: slide-left 0.3s ease 0.6s;
   animation-fill-mode: forwards;
-  opacity: 0;
-  transform: translate(-100px);
-  -webkit-transform: translate(-100px);
-  -moz-transform: translate(-100px);
-  -ms-transform: translate(-100px);
-  -o-transform: translate(-100px);
-}       
-.sidebar .settings ul li.theme{
-  transform: translateX(100px);
-  animation-delay: .3s;
-  -webkit-transform: translateX(100px);
-  -moz-transform: translateX(100px);
-  -ms-transform: translateX(100px);
-  -o-transform: translateX(100px);
+  opacity: 1;
+  
 }
-.sidebar .settings ul li.invite-friends{
-  transform: translateX(100px);
-  animation-delay: .3s;
-  -webkit-transform: translateX(100px);
-  -moz-transform: translateX(100px);
-  -ms-transform: translateX(100px);
-  -o-transform: translateX(100px);
-}
-.sidebar .settings ul li.view-mode{      
-  animation-delay: .6s;
-}
-.sidebar .settings ul li.rating-reviews{
-  transform: translateX(100px);  
-  animation-delay: .3s;
-  -webkit-transform: translateX(100px);
-  -moz-transform: translateX(100px);
-  -ms-transform: translateX(100px);
-  -o-transform: translateX(100px);
-}
-@keyframes slide-left {
-  to {
-    transform: translateX(0px);
-    -webkit-transform: translateX(0px);
-    -moz-transform: translateX(0px);
-    -ms-transform: translateX(0px);
-    -o-transform: translateX(0px);
-    opacity: 1;
-  }
-}
- .sidebar .settings ul li .left-part p {
+
+.sidebar .settings ul li .left-part p {
   font-size: 18px;
   font-weight: 600;
 }
