--- a/style.css
+++ b/style.css
@@ -328,8 +328,11 @@ main section.active {
   opacity: 0.4;
 }
 
-.sidebar .settings ul li:hover {
-  background-color: rgb(225, 225, 225);
+@media  screen and (min-width:1024px) {
+  .sidebar .settings ul li:hover {
+    background-color: rgb(225, 225, 225);
+  }
+  
 }
 /* accoutn add style */
 .box-body,
