--- a/home.css
+++ b/home.css
@@ -1159,7 +1159,8 @@ background: linear-gradient(135deg, #7a02c5 0%, #2397d1 100%);
   height: 10rem;
   background-color: rgb(236, 236, 236);
   position: absolute;
-  animation: shine-line 0.5s ease-in-out 0.5s;
+  animation: shine-line 0.5s ease-in-out .5s;
+  -webkit-animation: shine-line 0.5s ease-in-out .5s;
 }
 @keyframes shine-line {
   to {
