--- a/home.css
+++ b/home.css
@@ -493,7 +493,7 @@
   justify-content: center;
   align-items: center;
 }
-.parent-detail-view.active{
+.parent-detail-view.active {
   display: flex;
   transition: background-color 0.3s linear;
   -webkit-transition: background-color 0.3s linear;
@@ -610,7 +610,7 @@
   top: 17%;
   left: 15px;
   right: 15px;
-background: linear-gradient(135deg, #7a02c5 0%, #2397d1 100%);
+  background: linear-gradient(135deg, #7a02c5 0%, #2397d1 100%);
   z-index: -1;
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
@@ -1033,7 +1033,7 @@ background: linear-gradient(135deg, #7a02c5 0%, #2397d1 100%);
   0% {
     opacity: 0;
   }
-  100%{
+  100% {
     opacity: 1;
   }
 }
@@ -1090,7 +1090,7 @@ background: linear-gradient(135deg, #7a02c5 0%, #2397d1 100%);
 .pp-users-container {
   width: 100%;
   height: 100vh;
-  display:none;
+  display: none;
   justify-content: center;
   align-items: center;
   flex-direction: column;
@@ -1148,7 +1148,7 @@ background: linear-gradient(135deg, #7a02c5 0%, #2397d1 100%);
   position: relative;
   overflow: hidden;
   transition: all 1s ease 0.6s;
- 
+  color: #000000 !important;
 }
 
 #user-count.active::before {
@@ -1159,8 +1159,8 @@ background: linear-gradient(135deg, #7a02c5 0%, #2397d1 100%);
   height: 10rem;
   background-color: rgb(236, 236, 236);
   position: absolute;
-  animation: shine-line 0.5s ease-in-out .5s;
-  -webkit-animation: shine-line 0.5s ease-in-out .5s;
+  animation: shine-line 0.5s ease-in-out 0.5s;
+  -webkit-animation: shine-line 0.5s ease-in-out 0.5s;
 }
 @keyframes shine-line {
   to {
@@ -1183,7 +1183,7 @@ background: linear-gradient(135deg, #7a02c5 0%, #2397d1 100%);
   text-align: center;
 }
 .total {
-  background-color: white;
+ 
   padding: 5px 18px;
   background-color: rgb(255, 191, 0);
   position: absolute;
@@ -1194,6 +1194,7 @@ background: linear-gradient(135deg, #7a02c5 0%, #2397d1 100%);
   line-height: 30px;
   font-weight: 500;
   text-align: center;
+  color: #000000 !important;
 }
 .outer {
   position: relative;
