--- a/review.css
+++ b/review.css
@@ -380,3 +380,22 @@ li.li-bar {
   align-items: center;
   gap: 10px;
 }
+
+.review-back-btn{
+  position: fixed;
+  bottom: 25px;
+  right: 15px;
+  width: 50px;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(255, 255, 255);
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+  z-index: 1;
+}
+
