--- a/review.css
+++ b/review.css
@@ -16,18 +16,18 @@
   gap: 25px;
 }
 
-.rr-container.active{
+.rr-container.active {
   display: flex;
   opacity: 0;
-  animation: showReviews .3s ease-in-out;
+  animation: showReviews 0.3s ease-in-out;
 
   animation-fill-mode: forwards;
 }
 @keyframes showReviews {
-  0%{
+  0% {
     opacity: 0;
   }
-  100%{
+  100% {
     opacity: 1;
   }
 }
@@ -167,7 +167,7 @@ li.li-bar {
   padding: 5px 10px;
   align-items: center;
   width: 100vw;
-  background-color:#ffffff;
+  background-color: #ffffff;
   z-index: 1;
 }
 .review-input-container {
@@ -374,11 +374,7 @@ li.li-bar {
 .rr-container header .left img {
   width: 30px;
 }
- header .left .app-header img {
-  width: 25px;
-  user-select: none;
-  resize: none;
-}
+
 .app-header {
   display: flex;
   justify-content: center;
@@ -390,10 +386,9 @@ li.li-bar {
   justify-content: center;
   align-items: center;
   gap: 8px;
-  
 }
 
-.review-back-btn{
+.review-back-btn {
   position: fixed;
   bottom: 25px;
   right: 15px;
@@ -410,7 +405,7 @@ li.li-bar {
   -o-border-radius: 50%;
   z-index: 1;
 }
-.review-profile{
+.review-profile {
   display: flex;
   justify-content: center;
   align-items: center;
