--- a/style.css
+++ b/style.css
@@ -618,3 +618,122 @@ main section.active {
 .category-icons-parent p {
   margin-bottom: 5px;
 }
+
+
+/* MY ACCOUNT STYLE */
+.my-account-container {
+  position:absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  gap: 15px;
+  z-index:1;
+  display: none;
+  flex-direction: column;
+  justify-content: start;
+  padding: 10px 15px;
+  background-color:#ffffff;
+  
+}
+.app.dark .my-account-container{
+  background-color: #000000;
+}
+.my-account-container.active{
+  display: flex;
+}
+.my-account-container::before{
+  content:"";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 50%;
+  background:linear-gradient(to bottom left, rgb(0, 255, 213),rgb(230, 0, 255));
+  z-index: -1;
+}
+.account-container-body{
+  width: 100%;
+  background-color:#ffffff;
+  border-radius: 10px;
+  animation: come-up .3s ease;
+  -webkit-animation: come-up .3s ease;
+
+}
+.app.dark .account-container-body{
+  background-color:#050505;
+}
+@keyframes come-up {
+  0%{
+    transform: translateY(100px);
+    -webkit-transform: translateY(100px);
+    -moz-transform: translateY(100px);
+    -ms-transform: translateY(100px);
+    -o-transform: translateY(100px);
+}
+}
+
+
+.my-account-container header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+  flex-direction: column;
+  gap: 10px;
+}
+
+
+
+
+.my-account-container .settings ul {
+  display: flex;
+  list-style: none;
+  flex-direction: column;
+}
+.my-account-container .settings ul li {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
+  align-items: center;
+  gap: 20px;
+  animation: slide-left 0.3s ease;
+  padding: 15px;
+  -webkit-animation: slide-left 0.3s ease 0.6s;
+  animation-fill-mode: forwards;
+  opacity: 1;
+  border-bottom: 1px solid rgb(231, 231, 231);
+}
+.app.dark .my-account-container .settings ul li {
+ 
+  border-bottom: 1px solid rgb(32, 31, 31);
+}
+
+.my-account-container .settings ul li .left-part p {
+  font-size: 18px;
+  font-weight: 600;
+}
+.my-account-container .settings ul li .left-part {
+  display: flex;
+  gap: 15px;
+}
+.my-account-container .settings ul li .left-part img{
+  filter: invert(0.5);
+  width: 25px;
+}
+.my-account-container .settings ul li .arrow-right {
+  opacity: 0.4;
+}
+ header .left img {
+  width: 30px;
+}
+
+.my-account-container .app-header {
+  display: flex;
+  justify-content: left;
+  align-items: center;
+  gap: 10px;
+}
+.my-account-container .app-header img {
+  width: 25px;
+}
