--- a/style.css
+++ b/style.css
@@ -740,3 +740,42 @@ main section.active {
   filter:brightness(11);
   -webkit-filter:brightness(11);
 }
+
+.account-page-profile {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+  padding: 10px 10px;
+  position: relative;
+  z-index: 1;
+  
+}
+.account-page-profile::before{
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 70px;
+  background: linear-gradient(
+    to bottom left,
+    rgba(120, 120, 202, 0.735),
+    rgba(114, 174, 198, 0.678)
+  );
+  z-index: -1;
+  border-radius: 0px 0px 400px 400px;
+}
+.account-page-profile img {
+  width: 100px;
+  background-color: rgb(255, 255, 255);
+  border-radius: 50%;
+  transform: scale(1.1);
+  border: 2px solid rgb(217, 217, 217);
+  padding: 5px;
+}
+.account-profile-text {
+  display: flex;
+  flex-direction: column-reverse;
+}
