--- a/css/style.css
+++ b/css/style.css
@@ -61,15 +61,15 @@ footer {
 .slider {
   position: absolute;
   top: 0;
-left: 10px;
-  transition: left .3s ease;
+  left: 10px;
+  transition: left 0.3s ease;
   width: 10%;
   height: 5%;
   background-color: rgb(0, 0, 0);
-  -webkit-transition: left .3s ease;
-  -moz-transition: left .3s ease;
-  -ms-transition: left .3s ease;
-  -o-transition: left .3s ease;
+  -webkit-transition: left 0.3s ease;
+  -moz-transition: left 0.3s ease;
+  -ms-transition: left 0.3s ease;
+  -o-transition: left 0.3s ease;
 }
 footer nav ul {
   list-style: none;
@@ -87,7 +87,6 @@ footer nav ul li {
   align-items: center;
   font-size: 14px;
 }
-
 
 main {
   display: flex;
@@ -619,66 +618,67 @@ main section.active {
   margin-bottom: 5px;
 }
 
-
 /* MY ACCOUNT STYLE */
 .my-account-container {
-  position:absolute;
+  position: absolute;
   top: 0;
   left: 0;
   width: 100vw;
   height: 100vh;
   gap: 15px;
-  z-index:1;
+  z-index: 1;
   display: none;
   flex-direction: column;
   justify-content: start;
   padding: 10px;
-  background-color:#ffffff;
+  background-color: #ffffff;
   overflow: hidden;
   overflow-y: scroll;
   scrollbar-width: none;
-  
 }
-.app.dark .my-account-container{
+.app.dark .my-account-container {
   background-color: #000000;
 }
-.my-account-container.active{
+.my-account-container.active {
   display: flex;
 }
-.my-account-container::before{
-  content:"";
+.my-account-container::before {
+  content: "";
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 50%;
-  background:linear-gradient(to bottom left, rgb(0, 255, 213),rgb(230, 0, 255));
+  background: linear-gradient(
+    to bottom left,
+    rgb(0, 255, 213),
+    rgb(230, 0, 255)
+  );
   z-index: -1;
 }
-.account-container-body{
+.account-container-body {
   width: 100%;
-  background-color:#ffffff;
+  background-color: #ffffff;
   border-radius: 10px;
-  animation: come-up .3s ease;
-  -webkit-animation: come-up .3s ease;
+  animation: come-up 0.3s ease;
+  -webkit-animation: come-up 0.3s ease;
   -webkit-border-radius: 10px;
   -moz-border-radius: 10px;
   -ms-border-radius: 10px;
   -o-border-radius: 10px;
 }
-.app.dark .account-container-body{
-  background-color:#050505;
+.app.dark .account-container-body {
+  background-color: #050505;
 }
 @keyframes come-up {
-  0%{
+  0% {
     transform: translateY(100px);
     -webkit-transform: translateY(100px);
     -moz-transform: translateY(100px);
     -ms-transform: translateY(100px);
     -o-transform: translateY(100px);
+  }
 }
-}
-
 
 .my-account-container header {
   display: flex;
@@ -688,9 +688,6 @@ main section.active {
   flex-direction: column;
   gap: 10px;
 }
-
-
-
 
 .my-account-container .settings ul {
   display: flex;
@@ -711,7 +708,6 @@ main section.active {
   border-bottom: 1px solid rgb(231, 231, 231);
 }
 .app.dark .my-account-container .settings ul li {
- 
   border-bottom: 1px solid rgb(32, 31, 31);
 }
 
@@ -723,14 +719,13 @@ main section.active {
   display: flex;
   gap: 15px;
 }
-.my-account-container .settings ul li .left-part img{
+.my-account-container .settings ul li .left-part img {
   filter: invert(0.5);
   width: 25px;
 }
 .my-account-container .settings ul li .arrow-right {
   opacity: 0.4;
 }
-
 
 .my-account-container .app-header {
   display: flex;
@@ -740,8 +735,8 @@ main section.active {
 }
 .my-account-container .app-header img {
   width: 25px;
-  filter:brightness(11);
-  -webkit-filter:brightness(11);
+  filter: brightness(11);
+  -webkit-filter: brightness(11);
 }
 
 .account-page-profile {
@@ -753,9 +748,8 @@ main section.active {
   padding: 10px 10px;
   position: relative;
   z-index: 1;
-  
 }
-.account-page-profile::before{
+.account-page-profile::before {
   content: "";
   position: absolute;
   top: 0;
@@ -764,11 +758,15 @@ main section.active {
   height: 70px;
   background: linear-gradient(
     to bottom left,
-    rgba(120, 120, 202, 0.735),
-    rgba(114, 174, 198, 0.678)
+    rgba(213, 213, 220, 0.804),
+    rgba(114, 198, 178, 0.493)
   );
   z-index: -1;
-  border-radius: 0px 0px 400px 400px;
+  border-radius: 0px 0px 20px 20px;
+  -webkit-border-radius: 0px 0px 20px 20px;
+  -moz-border-radius: 0px 0px 20px 20px;
+  -ms-border-radius: 0px 0px 20px 20px;
+  -o-border-radius: 0px 0px 20px 20px;
 }
 .account-page-profile img {
   width: 100px;
