--- a/css/home.css
+++ b/css/home.css
@@ -1222,3 +1222,34 @@
 #user-count.active {
   font-size: 55px;
 }
+
+/* Styling for no content */
+.main-content .no-content-container{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  
+}
+.main-content .no-content-container img {
+  width: 20em;
+  height: 20em;
+  animation: zoom .3s ease;
+  -webkit-animation: zoomIn .5s ease;
+}
+@keyframes zoomIn {
+  0%{
+    transform: scale(.8);
+    opacity: 0;
+    -webkit-transform: scale(.8);
+    -moz-transform: scale(.8);
+    -ms-transform: scale(.8);
+    -o-transform: scale(.8);
+}
+}
+.main-content .no-content-container p {
+  text-align: center;
+  position: absolute;
+  bottom: -10px;
+}
