--- a/css/home.css
+++ b/css/home.css
@@ -167,8 +167,14 @@
   font-weight: 600;
   color: green;
 }
+.amount.transfer {
+  color: #64b5f6;
+}
 .incomeBg {
   background-color: green;
+}
+.transferBg {
+  background-color: #64b5f6;
 }
 .amount.red,
 .amount.expense {
@@ -603,7 +609,6 @@
   animation: topup 0.7s ease-out;
   -webkit-animation: topup 0.7s ease-out;
   animation-fill-mode: forwards;
- 
 }
 .input-containers .top-portion .sub-head-one::before {
   position: absolute;
@@ -1224,32 +1229,32 @@
 }
 
 /* Styling for no content */
-.main-content .no-content-container{
+.main-content .no-content-container {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   position: relative;
-  
 }
+
 .main-content .no-content-container img {
   width: 20em;
   height: 20em;
-  animation: zoom .3s ease;
-  -webkit-animation: zoomIn .5s ease;
+  animation: zoom 0.3s ease;
+  -webkit-animation: zoomIn 0.5s ease;
 }
 @keyframes zoomIn {
-  0%{
-    transform: scale(.8);
+  0% {
+    transform: scale(0.8);
     opacity: 0;
-    -webkit-transform: scale(.8);
-    -moz-transform: scale(.8);
-    -ms-transform: scale(.8);
-    -o-transform: scale(.8);
-}
+    -webkit-transform: scale(0.8);
+    -moz-transform: scale(0.8);
+    -ms-transform: scale(0.8);
+    -o-transform: scale(0.8);
+  }
 }
 .main-content .no-content-container p {
   text-align: center;
   position: absolute;
-  bottom: -10px;
+  bottom: -20px;
 }
