--- a/css/home.css
+++ b/css/home.css
@@ -1272,3 +1272,51 @@
   justify-content: space-between;
   align-items: center;
 }
+
+
+/* Side-footer  */
+ .side-footer {
+  display: none;
+  z-index: 1;
+  border-right: 1px solid rgb(205, 205, 205);
+  height: 100%;
+}
+ .side-footer ul.menu {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 200px;
+  padding: 10px;
+  gap: 10px;
+}
+ .side-footer ul.menu li {
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  gap: 15px;
+  width: 100%;
+  padding: 10px 20px;
+  padding-left: 8px;
+  flex-grow: 1;
+}
+ .side-footer ul.menu li img {
+  width: 25px;
+}
+ .side-footer ul.menu li p {
+  font-size: 15px;
+  font-weight: 500;
+}
+ .side-footer ul.menu li:hover,  .side-footer ul.menu li.active {
+  background-color: rgb(138, 5, 239);
+  color: #ffffff;
+  border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
+}
+ .side-footer ul.menu li:hover img,  .side-footer ul.menu li.active img {
+  filter: invert(1);
+  -webkit-filter: invert(1);
+}
